--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.4.0",
     "react-scripts": "^5.0.1",
-    "styled-components": "^5.3.5",
+    "styled-components": "^6.0.0-alpha.7",
     "swr": "^1.3.0",
     "usehooks-ts": "^2.7.1"
   },
@@ -44,6 +44,8 @@
     "@storybook/addon-storysource": "^7.0.0-alpha.33",
     "@storybook/addon-viewport": "^7.0.0-alpha.33",
     "@storybook/builder-webpack5": "^7.0.0-alpha.33",
+    "@storybook/client-api": "^7.0.0-alpha.33",
+    "@storybook/components": "^7.0.0-alpha.33",
     "@storybook/manager-webpack5": "^7.0.0-alpha.10",
     "@storybook/node-logger": "^7.0.0-alpha.33",
     "@storybook/preset-create-react-app": "^4.1.2",
@@ -90,6 +92,13 @@
     },
     "@storybook/preset-create-react-app": {
       "@storybook/react": "$@storybook/react"
+    },
+    "@storybook/testing-react": {
+      "@storybook/client-api": "$@storybook/client-api",
+      "@storybook/react": "$@storybook/react"
+    },
+    "storybook-addon-designs": {
+      "@storybook/theming": "$@storybook/theming"
     },
     "styled-reset": {
       "styled-components": "$styled-components"
