add storybook addons

--- a/package.json
+++ b/package.json
@@ -20,10 +20,14 @@
     "@types/styled-components": "^5.1.26",
     "@vitejs/plugin-react": "^2.1.0",
     "firebase": "^9.10.0",
+    "i18next": "^21.9.2",
+    "i18next-browser-languagedetector": "^6.1.5",
+    "i18next-http-backend": "^1.4.4",
     "ky": "^0.31.3",
     "nookies": "^2.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^11.18.6",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.4.0",
     "react-scripts": "^5.0.1",
@@ -74,6 +78,8 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-storybook": "^0.6.4",
     "jsdom": "^20.0.0",
+    "mockjs": "^1.1.0",
+    "msw-storybook-addon": "^1.6.3",
     "prettier": "^2.7.1",
     "prop-types": "^15.8.1",
     "storybook": "^7.0.0-alpha.33",
@@ -132,5 +138,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
