--- a/package.json
+++ b/package.json
@@ -28,15 +28,14 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^11.18.6",
-    "react-redux": "^8.0.2",
-    "react-router-dom": "^6.4.0",
+    "react-redux": "^8.0.4",
+    "react-router-dom": "^6.4.1",
     "react-scripts": "^5.0.1",
     "styled-components": "^6.0.0-alpha.7",
     "swr": "^1.3.0",
     "usehooks-ts": "^2.7.1"
   },
   "devDependencies": {
-    "@mdx-js/react": "^1.6.22",
     "@storybook/addon-a11y": "^7.0.0-alpha.33",
     "@storybook/addon-actions": "^7.0.0-alpha.33",
     "@storybook/addon-backgrounds": "^7.0.0-alpha.33",
@@ -51,6 +50,7 @@
     "@storybook/client-api": "^7.0.0-alpha.33",
     "@storybook/components": "^7.0.0-alpha.33",
     "@storybook/manager-webpack5": "^7.0.0-alpha.10",
+    "@storybook/mdx2-csf": "^0.0.3",
     "@storybook/node-logger": "^7.0.0-alpha.33",
     "@storybook/preset-create-react-app": "^4.1.2",
     "@storybook/react": "^7.0.0-alpha.33",
@@ -60,13 +60,13 @@
     "@storybook/theming": "^7.0.0-alpha.33",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
-    "@types/react": "^18.0.20",
+    "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.38.0",
     "@typescript-eslint/parser": "^5.38.0",
     "babel-plugin-named-exports-order": "^0.0.2",
     "chromatic": "^6.10.0",
-    "eslint": "^8.23.1",
+    "eslint": "^8.24.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-prettier": "^8.5.0",
