--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@storybook/addon-links": "^7.0.0-alpha.33",
     "@storybook/addon-storysource": "^7.0.0-alpha.33",
     "@storybook/addon-viewport": "^7.0.0-alpha.33",
+    "@storybook/builder-vite": "^7.0.0-alpha.33",
     "@storybook/builder-webpack5": "^7.0.0-alpha.33",
     "@storybook/client-api": "^7.0.0-alpha.33",
     "@storybook/components": "^7.0.0-alpha.33",
@@ -54,6 +55,7 @@
     "@storybook/node-logger": "^7.0.0-alpha.33",
     "@storybook/preset-create-react-app": "^4.1.2",
     "@storybook/react": "^7.0.0-alpha.33",
+    "@storybook/react-vite": "^7.0.0-alpha.33",
     "@storybook/react-webpack5": "^7.0.0-alpha.33",
     "@storybook/testing-library": "^0.0.13",
     "@storybook/testing-react": "^1.3.0",
@@ -87,6 +89,7 @@
     "tailwindcss": "^3.1.8",
     "tsconfig-paths-webpack-plugin": "^4.0.0",
     "typescript": "^4.8.3",
+    "vite-tsconfig-paths": "^3.5.1",
     "vitest": "^0.23.4",
     "webpack": "^5.74.0"
   },
