--- a/package.json
+++ b/package.json
@@ -14,58 +14,57 @@
   },
   "dependencies": {
     "@octokit/core": "^4.0.5",
-    "@primer/octicons-react": "^17.5.0",
+    "@primer/octicons-react": "^17.6.0",
     "@reduxjs/toolkit": "^1.8.5",
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.26",
     "@vitejs/plugin-react": "^2.1.0",
-    "firebase": "^9.10.0",
-    "i18next": "^21.9.2",
-    "i18next-browser-languagedetector": "^6.1.5",
+    "axios": "^1.1.0",
+    "firebase": "^9.11.0",
+    "i18next": "^21.10.0",
+    "i18next-browser-languagedetector": "^6.1.6",
     "i18next-http-backend": "^1.4.4",
-    "ky": "^0.31.3",
     "nookies": "^2.5.2",
+    "ohmyfetch": "^0.4.19",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^11.18.6",
     "react-redux": "^8.0.4",
-    "react-router-dom": "^6.4.1",
+    "react-router-dom": "^6.4.2",
     "react-scripts": "^5.0.1",
-    "styled-components": "^6.0.0-alpha.7",
-    "swr": "^1.3.0",
-    "usehooks-ts": "^2.7.1"
+    "styled-components": "^6.0.0-beta.3",
+    "usehooks-ts": "^2.7.2"
   },
   "devDependencies": {
-    "@storybook/addon-a11y": "^7.0.0-alpha.33",
-    "@storybook/addon-actions": "^7.0.0-alpha.33",
-    "@storybook/addon-backgrounds": "^7.0.0-alpha.33",
+    "@storybook/addon-a11y": "^7.0.0-alpha.35",
+    "@storybook/addon-actions": "^7.0.0-alpha.35",
+    "@storybook/addon-backgrounds": "^7.0.0-alpha.35",
     "@storybook/addon-console": "^1.2.3",
-    "@storybook/addon-controls": "^7.0.0-alpha.33",
-    "@storybook/addon-essentials": "^7.0.0-alpha.33",
-    "@storybook/addon-interactions": "^7.0.0-alpha.33",
-    "@storybook/addon-links": "^7.0.0-alpha.33",
-    "@storybook/addon-storysource": "^7.0.0-alpha.33",
-    "@storybook/addon-viewport": "^7.0.0-alpha.33",
-    "@storybook/builder-vite": "^7.0.0-alpha.33",
-    "@storybook/builder-webpack5": "^7.0.0-alpha.33",
-    "@storybook/client-api": "^7.0.0-alpha.33",
-    "@storybook/components": "^7.0.0-alpha.33",
-    "@storybook/manager-webpack5": "^7.0.0-alpha.10",
+    "@storybook/addon-controls": "^7.0.0-alpha.35",
+    "@storybook/addon-essentials": "^7.0.0-alpha.35",
+    "@storybook/addon-interactions": "^7.0.0-alpha.35",
+    "@storybook/addon-links": "^7.0.0-alpha.35",
+    "@storybook/addon-storysource": "^7.0.0-alpha.35",
+    "@storybook/addon-viewport": "^7.0.0-alpha.35",
+    "@storybook/builder-vite": "^7.0.0-alpha.35",
+    "@storybook/builder-webpack5": "^7.0.0-alpha.35",
+    "@storybook/client-api": "^7.0.0-alpha.35",
+    "@storybook/components": "^7.0.0-alpha.35",
     "@storybook/mdx2-csf": "^0.0.3",
-    "@storybook/node-logger": "^7.0.0-alpha.33",
+    "@storybook/node-logger": "^7.0.0-alpha.35",
     "@storybook/preset-create-react-app": "^4.1.2",
-    "@storybook/react": "^7.0.0-alpha.33",
-    "@storybook/react-vite": "^7.0.0-alpha.33",
-    "@storybook/react-webpack5": "^7.0.0-alpha.33",
+    "@storybook/react": "^7.0.0-alpha.35",
+    "@storybook/react-vite": "^7.0.0-alpha.35",
+    "@storybook/react-webpack5": "^7.0.0-alpha.35",
     "@storybook/testing-library": "^0.0.13",
     "@storybook/testing-react": "^1.3.0",
-    "@storybook/theming": "^7.0.0-alpha.33",
+    "@storybook/theming": "^7.0.0-alpha.35",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
-    "@typescript-eslint/eslint-plugin": "^5.38.1",
-    "@typescript-eslint/parser": "^5.38.1",
+    "@typescript-eslint/eslint-plugin": "^5.39.0",
+    "@typescript-eslint/parser": "^5.39.0",
     "babel-plugin-named-exports-order": "^0.0.2",
     "chromatic": "^6.10.1",
     "eslint": "^8.24.0",
@@ -78,12 +77,12 @@
     "eslint-plugin-react": "^7.31.8",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-storybook": "^0.6.4",
-    "jsdom": "^20.0.0",
+    "jsdom": "^20.0.1",
     "mockjs": "^1.1.0",
     "msw-storybook-addon": "^1.6.3",
     "prettier": "^2.7.1",
     "prop-types": "^15.8.1",
-    "storybook": "^7.0.0-alpha.33",
+    "storybook": "^7.0.0-alpha.35",
     "storybook-addon-designs": "^7.0.0-alpha.2",
     "storybook-addon-themes": "^6.1.0",
     "tailwindcss": "^3.1.8",
