--- a/apps/issue-page-web/package.json
+++ b/apps/issue-page-web/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.1.0",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -16,12 +17,17 @@
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
+    "@types/node": "^17.0.12",
+    "@types/react": "18.0.17",
+    "@types/react-dom": "^18.0.6",
+    "@unocss/preset-attributify": "^0.45.26",
+    "@unocss/reset": "^0.45.26",
+    "@unocss/webpack": "^0.45.26",
     "eslint": "7.32.0",
     "eslint-config-custom": "*",
     "next-transpile-modules": "9.0.0",
     "tsconfig": "*",
-    "@types/node": "^17.0.12",
-    "@types/react": "18.0.17",
-    "typescript": "^4.5.3"
+    "typescript": "^4.5.3",
+    "unocss": "^0.45.26"
   }
 }
