--- a/apps/storybook-vite/package.json
+++ b/apps/storybook-vite/package.json
@@ -14,16 +14,16 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@mdx-js/react": "^2.1.5",
-    "@storybook/addon-essentials": "^7.0.0-beta.3",
+    "@mdx-js/react": "^2.2.1",
+    "@storybook/addon-essentials": "^7.0.0-beta.12",
     "@storybook/addon-interactions": "^7.0.0-beta.12",
     "@storybook/addon-links": "^7.0.0-beta.12",
-    "@storybook/builder-vite": "^7.0.0-beta.3",
-    "@storybook/mdx2-csf": "^0.1.0-next.8",
+    "@storybook/builder-vite": "^7.0.0-beta.12",
+    "@storybook/mdx2-csf": "^1.0.0-next.2",
     "@storybook/react": "^7.0.0-beta.12",
     "@storybook/react-vite": "^7.0.0-beta.12",
-    "@storybook/testing-library": "^0.0.13",
-    "storybook": "^7.0.0-beta.3",
+    "@storybook/testing-library": "^0.0.14-next.1",
+    "storybook": "^7.0.0-beta.12",
     "vite": "^4.0.2"
   },
   "overrides": {
